# deopt-v2-backend

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_TARGET.md  CODEX_GUARDRAILS.md  Cargo.toml  NEXT_TASK.md  README.md  TASK.md  telegram.py
migrations/: 0001_init.sql  0002_execution_intent_signatures.sql  0003_execution_simulations.sql  0004_indexer.sql  0005_indexed_perp_trade_intent_id.sql  0006_execution_reconciliations.sql  0007_execution_transactions.sql  0008_simulation_revert_diagnostics.sql
src/: error.rs  lib.rs  main.rs  types.rs
src/api/: dto.rs  http.rs  mod.rs  routes.rs
src/config/: env.rs
src/db/: mod.rs  models.rs  pool.rs  repository.rs
src/engine/: commands.rs  events.rs  mod.rs  state.rs
src/execution/: abi.rs  config.rs  executor.rs  intent.rs  mod.rs  perp_trade.rs  queue.rs  revert.rs  rpc.rs  runner.rs  signer.rs  simulator.rs  transaction.rs  tx_builder.rs
src/indexer/: config.rs  decoder.rs  events.rs  mod.rs  runner.rs  status.rs
src/mm/: gateway.rs  mod.rs
src/orderbook/: book.rs  matching.rs  mod.rs  price_level.rs
src/reconciliation/: mod.rs
src/rfq/: mod.rs  types.rs
src/signing/: eip712.rs  mod.rs  nonce.rs  signature.rs
tests/: engine_tests.rs  orderbook_tests.rs
