[package]
name = "deopt-v2-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
