[package]
name = "deopt-v2-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
axum = "0.7"
alloy-primitives = "0.7"
alloy-sol-types = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
k256 = { version = "0.13", features = ["ecdsa"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
